Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-7930

Crash in bin editor

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 2.6.0-rc
    • Qt Creator 2.6.0-beta, Qt Creator 2.6.0-rc
    • Editors
    • None
    • Ubuntu
    • 18cff29d8f9e4649554e1694d7297bfca1b3ffd3 6c99b8f57d874001b317db2b088f0af64fc09ee8

      To reproduce:
      1) Open a qtcreator project
      2) Using "Open File With..." point to src/plugins/bineditor/bineditor.pro
      3) Choose to open that file with Binary Editor
      4) After the editor is opened, press the arrow down key - crash

      Call stack:
      0 QString::operator= qstring.cpp 1411 0xb6f34b40
      1 BinEditorDocument::open bineditorplugin.cpp 226 0xb1649272
      2 BinEditorDocument::provideNewRange bineditorplugin.cpp 267 0xb16498a3
      3 BinEditorDocument::qt_static_metacall bineditorplugin.moc 119 0xb164782d
      4 QMetaObject::activate qobject.cpp 3547 0xb701cba9
      5 BINEditor::BinEditor::newRangeRequested moc_bineditor.cpp 265 0xb16590f3
      6 BINEditor::BinEditor::event bineditor.cpp 1055 0xb1650cb2
      7 QApplicationPrivate::notify_helper qapplication.cpp 4557 0xb749d548
      8 QApplication::notify qapplication.cpp 3998 0xb749b165
      9 QCoreApplication::notifyInternal qcoreapplication.cpp 915 0xb7001246
      10 QCoreApplication::sendSpontaneousEvent qcoreapplication.h 234 0xb749fca1
      11 qt_sendSpontaneousEvent qapplication.cpp 5555 0xb749d8a9
      12 QKeyMapper::sendKeyEvent qkeymapper_x11.cpp 1866 0xb755e3a0
      13 QKeyMapperPrivate::translateKeyEvent qkeymapper_x11.cpp 1836 0xb755e0ad
      14 QApplication::x11ProcessEvent qapplication_x11.cpp 3523 0xb752d078
      15 QEventDispatcherX11::processEvents qeventdispatcher_x11.cpp 132 0xb75600a8
      16 QEventLoop::processEvents qeventloop.cpp 149 0xb6ffea89
      17 QEventLoop::exec qeventloop.cpp 204 0xb6ffebf7
      18 QCoreApplication::exec qcoreapplication.cpp 1187 0xb70018c2
      19 QApplication::exec qapplication.cpp 3818 0xb749aac6
      20 main main.cpp 435 0x805172f

        For Gerrit Dashboard: QTCREATORBUG-7930
        # Subject Branch Project Status CR V

            hjk hjk
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes