bineditor: don't crash when no error string is requested

Task-number: QTCREATORBUG-7930
Change-Id: Ia3b2a21d843ce9de7f61f754da0b276355c377f2
Reviewed-by: Christian Kandeler <christian.kandeler@digia.com>